--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+
+
     "title": "Freelancer",
     "name": "startbootstrap-freelancer",
     "version": "4.0.0",
@@ -42,4 +44,8 @@
         "gulp-sass": "^3.1.0",
         "gulp-uglify": "3.0.0"
     }
+
+    "scripts": {
+  "start": "node index.js"
+  }
 }
