--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-
-
     "title": "Freelancer",
     "name": "startbootstrap-freelancer",
     "version": "4.0.0",
@@ -44,8 +42,9 @@
         "gulp-sass": "^3.1.0",
         "gulp-uglify": "3.0.0"
     }
+}
+
 
     "scripts": {
-  "start": "node index.js"
+  "start": "node index.html"
   }
-}
